--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "author": "",
   "license": "ISC",
-    "devDependencies": {
+  "devDependencies": {
     "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.4.1"
   }
 }
